Configure appsettings for database connections and JWT options AB#52

--- a/Group5F25.API/appsettings.Development.json
+++ b/Group5F25.API/appsettings.Development.json
@@ -1,8 +1,25 @@
 {
+  // Log settings for the project
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  // Allows all hosts to run the app
+  "AllowedHosts": "*",
+
+  // Local database connection for testing
+  "ConnectionStrings": {
+    "DriverAnalyticsDb": "Server=(localdb)\\MSSQLLocalDB;Database=DriverAnalytics_TestDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+
+  // JWT settings for login and token
+  "Jwt": {
+    "Key": "TEST_SECRET_KEY_SHOULD_BE_32+_CHARS_LONG_123456", // Secret key for tokens
+    "Issuer": "Group5F25.API", // Who creates the token
+    "Audience": "Group5F25.Client", // Who uses the token
+    "ExpiresMinutes": "60" // Token time limit
   }
 }
