--- a/Group5F25.API/appsettings.json
+++ b/Group5F25.API/appsettings.json
@@ -2,11 +2,16 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=127.0.0.1;port=3306;database=driver_analytics_birendra;user=root;password=Mango@9876;"
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "ThisIsASecretKeyForGroup5ProjectLengthMustBe32Characters",
+    "Issuer": "Group5F25.API",
+    "Audience": "Group5F25.Client"
   }
+}
